--- a/tilemapper.kv
+++ b/tilemapper.kv
@@ -37,7 +37,7 @@
           on_release:  root.choice()
           size_hint_x:  0.25
 
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+##=========================================================
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 <TileScreen>:
@@ -224,83 +224,83 @@
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 19,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.preTile[0]
+            texture:  app.tile[40]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 0,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[1]
+            texture:  app.tile[41]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 1,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[2]
+            texture:  app.tile[42]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 2,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[3]
+            texture:  app.tile[43]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 3,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[4]
+            texture:  app.tile[44]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 4,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[5]
+            texture:  app.tile[45]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 5,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[6]
+            texture:  app.tile[46]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 6,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[7]
+            texture:  app.tile[47]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 7,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[8]
+            texture:  app.tile[48]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 8,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[9]
+            texture:  app.tile[49]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 9,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[10]
+            texture:  app.tile[50]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 10,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[11]
+            texture:  app.tile[51]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 11,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[12]
+            texture:  app.tile[52]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 12,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[13]
+            texture:  app.tile[53]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 13,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[14]
+            texture:  app.tile[54]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 14,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[15]
+            texture:  app.tile[55]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 15,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[16]
+            texture:  app.tile[56]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 16,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[17]
+            texture:  app.tile[57]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 17,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[18]
+            texture:  app.tile[58]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 18,  self.pos[1] )
           Rectangle:
-            texture:  app.preTile[19]
+            texture:  app.tile[59]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 19,  self.pos[1] )
 
@@ -313,23 +313,13 @@
         background_color:  .4, .5, .5,  1
         size_hint_x:  0.05
 
-    Label:
-      id:  current
-      text:  app.currentTile
-      size_hint_y:  0.06
-      canvas.before:
-        Color:
-          rgb:  (0.1, 0.1, 0.1,  1)
-        Rectangle:
-          size:  self.size
-          pos:  self.pos
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-    Button:  ##  map grid
-      id:  grid
-      on_press:  root.hover(1)
-      on_release: root.hover(0)
+    Button:  ##  map
+      id:  map
+      on_press:  root.paint(1)
+      on_release: root.paint(0)
       on_release:  root.place()
       background_color:  1, 1, 1,  0.3
       size:  self.size
@@ -343,6 +333,20 @@
       size_hint_y:  0.08
 
       Button:
+        text:  'v'
+        on_release:  root.vert(-1)
+        background_color:  .4, .5, .5,  1
+
+      Button:
+        text:  '^'
+        on_release:  root.vert(1)
+        background_color:  .4, .5, .5,  1
+
+      Label:
+        id:  current
+        text:  app.currentText
+
+      Button:
         text:  '<'
         on_release:  root.horiz(-1)
         background_color:  .4, .5, .5,  1
@@ -352,20 +356,6 @@
         on_release:  root.horiz(1)
         background_color:  .4, .5, .5,  1
 
-      Button:
-        text:  'OK'
-        on_press:  root.generate()
-        background_color:  .2, .3, .3,  1
-
-      Button:
-        text:  '^'
-        on_release:  root.vert(1)
-        background_color:  .4, .5, .5,  1
-
-      Button:
-        text:  'v'
-        on_release:  root.vert(-1)
-        background_color:  .4, .5, .5,  1
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -375,17 +365,12 @@
       size_hint_y:  0.1
 
       Button:
-        text:  '-'
-        on_release:  root.zoom(-0.2)
-        background_color:  .2, .3, .3,  1
-
-      Button:
         text:  'Enemy'  ##  red
         on_release:  root.layer(0)
         background_color:  .9, .5, .5,  1
 
       Button:
-        text:  'Screen'  ##  green
+        text:  'Bounds'  ##  green
         on_release:  root.layer(1)
         background_color:  .4, .9, .4,  1
 
@@ -395,7 +380,21 @@
         background_color:  .4, .4, .9,  1
 
       Button:
-        text:  '+'
-        on_release:  root.zoom(0.2)
+        text:  'OK'
+        on_press:  root.generate()
         background_color:  .2, .3, .3,  1
 
+      Button:
+        text:  'Fore'  ##  red
+        on_release:  root.layer(3)
+        background_color:  .9, .5, .5,  1
+
+      Button:
+        text:  'Mid'  ##  green
+        on_release:  root.layer(4)
+        background_color:  .4, .9, .4,  1
+
+      Button:
+        text:  'Back'  ##  blue
+        on_press:  root.layer(5)
+        background_color:  .4, .4, .9,  1
