--- a/tilemapper.kv
+++ b/tilemapper.kv
@@ -64,243 +64,243 @@
 
         canvas:
           Rectangle:
-            texture:  app.tile[0]
+            texture:  app.Tile[0]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 0,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[1]
+            texture:  app.Tile[1]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 1,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[2]
+            texture:  app.Tile[2]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 2,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[3]
+            texture:  app.Tile[3]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 3,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[4]
+            texture:  app.Tile[4]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 4,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[5]
+            texture:  app.Tile[5]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 5,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[6]
+            texture:  app.Tile[6]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 6,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[7]
+            texture:  app.Tile[7]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 7,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[8]
+            texture:  app.Tile[8]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 8,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[9]
+            texture:  app.Tile[9]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 9,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[10]
+            texture:  app.Tile[10]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 10,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[11]
+            texture:  app.Tile[11]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 11,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[12]
+            texture:  app.Tile[12]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 12,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[13]
+            texture:  app.Tile[13]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 13,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[14]
+            texture:  app.Tile[14]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 14,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[15]
+            texture:  app.Tile[15]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 15,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[16]
+            texture:  app.Tile[16]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 16,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[17]
+            texture:  app.Tile[17]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 17,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[18]
+            texture:  app.Tile[18]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 18,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[19]
+            texture:  app.Tile[19]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 19,  self.pos[1] + self.size[1] * .667 )
           Rectangle:
-            texture:  app.tile[20]
+            texture:  app.Tile[20]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 0,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[21]
+            texture:  app.Tile[21]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 1,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[22]
+            texture:  app.Tile[22]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 2,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[23]
+            texture:  app.Tile[23]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 3,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[24]
+            texture:  app.Tile[24]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 4,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[25]
+            texture:  app.Tile[25]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 5,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[26]
+            texture:  app.Tile[26]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 6,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[27]
+            texture:  app.Tile[27]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 7,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[28]
+            texture:  app.Tile[28]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 8,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[29]
+            texture:  app.Tile[29]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 9,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[30]
+            texture:  app.Tile[30]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 10,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[31]
+            texture:  app.Tile[31]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 11,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[32]
+            texture:  app.Tile[32]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 12,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[33]
+            texture:  app.Tile[33]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 13,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[34]
+            texture:  app.Tile[34]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 14,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[35]
+            texture:  app.Tile[35]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 15,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[36]
+            texture:  app.Tile[36]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 16,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[37]
+            texture:  app.Tile[37]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 17,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[38]
+            texture:  app.Tile[38]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 18,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[39]
+            texture:  app.Tile[39]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 19,  self.pos[1] + self.size[1] * .333 )
           Rectangle:
-            texture:  app.tile[40]
+            texture:  app.Tile[40]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 0,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[41]
+            texture:  app.Tile[41]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 1,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[42]
+            texture:  app.Tile[42]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 2,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[43]
+            texture:  app.Tile[43]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 3,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[44]
+            texture:  app.Tile[44]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 4,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[45]
+            texture:  app.Tile[45]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 5,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[46]
+            texture:  app.Tile[46]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 6,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[47]
+            texture:  app.Tile[47]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 7,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[48]
+            texture:  app.Tile[48]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 8,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[49]
+            texture:  app.Tile[49]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 9,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[50]
+            texture:  app.Tile[50]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 10,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[51]
+            texture:  app.Tile[51]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 11,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[52]
+            texture:  app.Tile[52]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 12,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[53]
+            texture:  app.Tile[53]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 13,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[54]
+            texture:  app.Tile[54]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 14,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[55]
+            texture:  app.Tile[55]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 15,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[56]
+            texture:  app.Tile[56]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 16,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[57]
+            texture:  app.Tile[57]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 17,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[58]
+            texture:  app.Tile[58]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 18,  self.pos[1] )
           Rectangle:
-            texture:  app.tile[59]
+            texture:  app.Tile[59]
             size:  (self.size[0] / 23,  self.size[1] / 3.3)
             pos:  (self.pos[0] + self.size[0] / 20 * 19,  self.pos[1] )
 
