--- a/tilemapper.kv
+++ b/tilemapper.kv
@@ -316,8 +316,8 @@
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-    Button:  ##  map
-      id:  map
+    Button:  ##  Map
+      id:  Map
       on_press:  root.paint(1)
       on_release: root.paint(0)
       on_release:  root.place()
